# We chose to go foreign because it doesn't make much sense to have NEWS,
# the license and the like in this directory, since it is not the absolute
# root of the project.
# This is not the root of the project because it's just an add-on to the real
# NAT64, which is the kernel module under mod/.
# And I don't even know if it's possible to mix autotools and kbuild.
AUTOMAKE_OPTIONS = foreign

SUBDIRS = stateful stateless joold
